--- a/docker/Makefile
+++ b/docker/Makefile
@@ -9,23 +9,23 @@ DISTRO ?= focal
 
 # Deb package version to use. For example "17.0.0-557.096f6a7.focal"
 # Not needed for testing builds
-STELLAR_CORE_VERSION ?=
+GRAMR_VERSION ?=
 
 # Set default tag
 ifndef TAG
-	TAG = ${USER}/stellar-core:$(shell git describe --always --tags --long)
+	TAG = ${USER}/gramr:$(shell git describe --always --tags --long)
 endif
 
 docker-build:
-ifndef STELLAR_CORE_VERSION
-	$(error STELLAR_CORE_VERSION environment variable must be set. For example STELLAR_CORE_VERSION=17.0.0-557.096f6a7.focal )
+ifndef GRAMR_VERSION
+	$(error GRAMR_VERSION environment variable must be set. For example GRAMR_VERSION=17.0.0-557.096f6a7.focal )
 endif
 ifndef TAG
-	TAG = stellar/stellar-core:$(STELLAR_CORE_VERSION)
+	TAG = stellar/gramr:$(GRAMR_VERSION)
 endif
 	$(SUDO)  docker build --pull \
 	--label org.opencontainers.image.created="$(BUILD_DATE)" \
-	--build-arg STELLAR_CORE_VERSION=${STELLAR_CORE_VERSION} \
+	--build-arg GRAMR_VERSION=${GRAMR_VERSION} \
 	--build-arg DISTRO=${DISTRO} \
 	-t ${TAG} .
 
