--- a/Builds/VisualStudio/gramr.vcxproj.filters
+++ b/Builds/VisualStudio/gramr.vcxproj.filters
@@ -354,7 +354,7 @@
     <ClCompile Include="..\..\src\invariant\BucketListIsConsistentWithDatabase.cpp">
       <Filter>invariant</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\invariant\ConservationOfLumens.cpp">
+    <ClCompile Include="..\..\src\invariant\ConservationOfGrams.cpp">
       <Filter>invariant</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\invariant\ConstantProductInvariant.cpp">
@@ -366,7 +366,7 @@
     <ClCompile Include="..\..\src\invariant\LedgerEntryIsValid.cpp">
       <Filter>invariant</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\main\StellarCoreVersion.cpp">
+    <ClCompile Include="..\..\src\main\GramrVersion.cpp">
       <Filter>main\generated</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\invariant\LiabilitiesMatchOffers.cpp">
@@ -690,7 +690,7 @@
     <ClCompile Include="..\..\src\invariant\test\BucketListIsConsistentWithDatabaseTests.cpp">
       <Filter>invariant\tests</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\invariant\test\ConservationOfLumensTests.cpp">
+    <ClCompile Include="..\..\src\invariant\test\ConservationOfGramsTests.cpp">
       <Filter>invariant\tests</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\invariant\test\InvariantTests.cpp">
@@ -1506,7 +1506,7 @@
     <ClInclude Include="..\..\src\invariant\BucketListIsConsistentWithDatabase.h">
       <Filter>invariant</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\invariant\ConservationOfLumens.h">
+    <ClInclude Include="..\..\src\invariant\ConservationOfGrams.h">
       <Filter>invariant</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\invariant\ConstantProductInvariant.h">
@@ -1797,7 +1797,7 @@
     <ClInclude Include="..\..\src\ledger\TrustLineWrapper.h">
       <Filter>ledger</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\main\StellarCoreVersion.h">
+    <ClInclude Include="..\..\src\main\GramrVersion.h">
       <Filter>main</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\main\Application.h">
@@ -2349,13 +2349,13 @@
     <None Include="..\..\docs\readme.md">
       <Filter>docs</Filter>
     </None>
-    <None Include="..\..\docs\stellar-core_example.cfg">
+    <None Include="..\..\docs\gramr_example.cfg">
       <Filter>docs</Filter>
     </None>
-    <None Include="..\..\docs\stellar-core_standalone.cfg">
+    <None Include="..\..\docs\gramr_standalone.cfg">
       <Filter>docs</Filter>
     </None>
-    <None Include="..\..\docs\stellar-core_testnet.cfg">
+    <None Include="..\..\docs\gramr_testnet.cfg">
       <Filter>docs</Filter>
     </None>
     <None Include="..\..\docs\transaction.md">
@@ -2416,10 +2416,10 @@
     <None Include="..\..\docs\software\security-protocol-release-notes.md">
       <Filter>docs\software</Filter>
     </None>
-    <None Include="..\..\docs\stellar-core_testnet_legacy.cfg">
+    <None Include="..\..\docs\gramr_testnet_legacy.cfg">
       <Filter>docs</Filter>
     </None>
-    <None Include="..\..\docs\stellar-core_example_validators.cfg">
+    <None Include="..\..\docs\gramr_example_validators.cfg">
       <Filter>docs</Filter>
     </None>
     <None Include="..\..\.github\ISSUE_TEMPLATE\bug-report.md">
@@ -2443,7 +2443,7 @@
     <None Include="..\..\src\util\LogPartitions.def">
       <Filter>util</Filter>
     </None>
-    <None Include="..\..\docs\stellar-core_testnet_validator.cfg">
+    <None Include="..\..\docs\gramr_testnet_validator.cfg">
       <Filter>docs</Filter>
     </None>
     <None Include="..\..\docs\software\ledger_query_examples.md">
@@ -2505,7 +2505,7 @@
     <CustomBuild Include="..\..\src\protocol-next\xdr\Stellar-internal.x">
       <Filter>xdr\next</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\..\src\main\StellarCoreVersion.cpp.in">
+    <CustomBuild Include="..\..\src\main\GramrVersion.cpp.in">
       <Filter>main</Filter>
     </CustomBuild>
     <CustomBuild Include="..\..\src\rust\src\lib.rs">
