--- a/docs/gramr_standalone.cfg
+++ b/docs/gramr_standalone.cfg
@@ -1,5 +1,5 @@
 # simple configuration for a standalone test "network"
-# see stellar-core_example.cfg for a description of the configuration parameters
+# see gramr_example.cfg for a description of the configuration parameters
 
 HTTP_PORT=8080
 PUBLIC_HTTP_PORT=false
